Added Stealth Tool to Administration Workspace

--- a/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/config/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -162,6 +162,7 @@ sakai.sites.description                             = An administration tool to 
 sakai.sites.title                                   = Sites
 sakai.sitesetup.description                         = Modify your sites and create new ones
 sakai.sitesetup.title                               = Worksite Setup
+sakai.stealth.                                      = Stealth System
 sakai.su.description                                = Tool for logging in as another user
 sakai.su.title                                      = Become User
 sakai.summary.calendar.description                  = Show a summary of calendar events in Home
